--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,8 @@
   | default @import url()
   |============================
 */
+@import "flatpickr/dist/flatpickr.min.css";
+@import "izitoast/dist/css/iziToast.min.css";
 @import url('./reset.css');
 
 :root {
